--- a/overons.html
+++ b/overons.html
@@ -52,9 +52,9 @@
             </div>
             <div>
                 <figure>
-                    <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                    <iframe src="https://www.youtube.com/embed/vGX7frAVsbg">
                     </iframe>
-                    <figcaption>Volg ons op youtube</figcaption>
+                    <figcaption>Binnenkort in 'Ons Jeugdhuis'</figcaption>
                 </figure>
             </div>
             <div>
